[package]
name = "omnipaxos"
version = "0.1.0"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dev-dependencies]
kompact = { git = "https://github.com/kompics/kompact", rev = "94956af" }
serial_test = "0.5.1"
rand = "0.8.4"

[features]
batch_accept = []
latest_accepted = []
latest_decide = []
continued_leader_reconfiguration = []

default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration"]

[profile.release]
lto = true