[package]
name = "examples"
version = "0.0.0"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2018"
publish = false

[dev-dependencies]
omnipaxos_core = { path = "../omnipaxos_core" }
omnipaxos_runtime = { path = "../omnipaxos_runtime" }
omnipaxos_storage = { path = "../omnipaxos_storage" }
tokio = { version = "1", features = ["sync", "macros"] }
zerocopy = { version = "0.6.1", optional = false }
rocksdb = { version = "0.18.0", optional = false }

[[example]]
name = "core"
path = "tutorial/core.rs"

[[example]]
name = "runtime"
path = "tutorial/runtime.rs"