[package]
name = "omnipaxos"
version = "0.2.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "A distributed log library written in Rust"
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
slog = { version = "2.7.0", optional = true }
slog-term = { version = "2.9.0", optional = true }
slog-async = { version = "2.7.0", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
toml = { version = "0.7.3", optional = true }
omnipaxos_macros = { version = "0.1.3", path = "../omnipaxos_macros", optional = true }
lru = { version = "0.11.0", optional = true }
num-traits = { version = "0.2.16", optional = true }
linked_hash_set = { version = "0.1.4", optional = true }

[dev-dependencies]
kompact = { git = "https://github.com/kompics/kompact", rev = "4fd1fdc", features = ["silent_logging"] }
omnipaxos_storage = { path = "../omnipaxos_storage", features = ["persistent_storage"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"
tempfile = "3.3.0"
serial_test = "0.5.1"
rand = "0.8.4"
serde_json = "1.0"

[features]
logging  = ["slog", "slog-term", "slog-async"]
toml_config = ["serde", "toml"]
macros = ["omnipaxos_macros"]
unicache = ["lru", "num-traits", "linked_hash_set"]

default = ["macros"]

[profile.release]
lto = true
