[package]
name = "omnipaxos_core"
version = "0.1.0"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.7.0", optional = true }
slog-term = { version = "2.9.0", optional = true }
slog-async = { version = "2.7.0", optional = true }
hocon = { version = "0.9.0", optional = true }

[dev-dependencies]
kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
omnipaxos_storage = { path = "../omnipaxos_storage" } 
serde = { version = "1.0", features = ["derive"] }
commitlog = { version = "0.2.0", optional = false }
sled = { version = "0.34.7", optional = false }
rocksdb = { version = "0.18.0", optional = false }
serial_test = "0.5.1"
rand = "0.8.4"

[features]
batch_accept = []
latest_accepted = []
latest_decide = []
rocksdb = []
sled = []
continued_leader_reconfiguration = []
logging  = [ "slog", "slog-term", "slog-async"]
hocon_config = [ "hocon" ]

default = ["sled", "latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]

#[profile.release]
#lto = true