[package]
name = "omnipaxos_core"
version = "0.1.0"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.7.0", optional = true }
slog-term = { version = "2.9.0", optional = true }
slog-async = { version = "2.7.0", optional = true }
hocon = { version = "0.9.0", optional = true }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
preprocessor = { git = "https://github.com/haraldng/preprocessor", rev = "fc7f475" }

[dev-dependencies]
kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"]}
serial_test = "0.5.1"
rand = "0.8.4"

[features]
batch_accept = []
latest_accepted = []
latest_decide = []
continued_leader_reconfiguration = []
logging  = [ "slog", "slog-term", "slog-async"]
hocon_config = [ "hocon" ]


default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]

[profile.release]
lto = true