[package]
name = "omnipaxos_core"
version = "0.1.0"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.7.0", optional = true }
slog-term = { version = "2.9.0", optional = true }
slog-async = { version = "2.7.0", optional = true }
hocon = { version = "0.9.0", optional = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true } 
serde = { version = "1.0", features = ["derive"] }
commitlog = "0.2.0"
sled = "0.34.7"
tempfile = "3.3.0"
serial_test = "0.5.1"
rand = "0.8.4"

[features]
batch_accept = []
continued_leader_reconfiguration = []
logging  = [ "slog", "slog-term", "slog-async"]
hocon_config = [ "hocon" ]

default = ["continued_leader_reconfiguration", "batch_accept"]

#[profile.release]
#lto = true