[package]
name = "omnipaxos_macros"
version = "0.1.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "Macros for OmniPaxos."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"

[dev-dependencies]
omnipaxos = { path = "../omnipaxos", features = ["macros"] }
omnipaxos_storage = { path = "../omnipaxos_storage" }
