[package]
name = "omnipaxos_runtime"
version = "0.1.0"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2018"

[dependencies]
omnipaxos_core = { path = "../omnipaxos_core", default-features = true, features = ["logging", "hocon_config"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

[dev-dependencies]
serial_test = "0.5.1"

[features]
batch_accept = []
latest_accepted = []
continued_leader_reconfiguration = []

default = ["latest_accepted", "continued_leader_reconfiguration", "batch_accept"]

#[profile.release]
#lto = true