[package]
name = "omnipaxos_storage"
version = "0.2.1"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "Storage implementations for OmniPaxos."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
omnipaxos = { path = "../omnipaxos", features = ["serde"] }
sled = { version = "0.34.7" }
serde = { version = "1.0", features = ["derive"] }
commitlog = "0.2.0"
bincode = "1.3.3"
zerocopy = "0.6.1"

[profile.release]
lto = true
