[package]
name = "omnipaxos_storage"
version = "0.2.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "Storage implementations for OmniPaxos."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
omnipaxos = { version = "0.2.2", path = "../omnipaxos", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
zerocopy = "0.6.1"
rocksdb = "0.21.0"
[profile.release]
lto = true
