[package]
name = "omnipaxos_storage"
version = "0.2.2"
authors = ["Harald Ng <hng@kth.se>"]
edition = "2021"
description = "Storage implementations for OmniPaxos."
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/haraldng/omnipaxos"
homepage = "https://omnipaxos.com/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
omnipaxos = { version = "0.2.2", path = "../omnipaxos", features = ["serde"] }
serde = { version = "1.0", features = ["derive"], optional= true }
bincode = { version = "1.3.3", optional = true }
zerocopy = { version = "0.6.1", optional = true }
rocksdb = { version = "0.21.0", optional = true }
[profile.release]
lto = true

[features]
persistent_storage = ["dep:rocksdb", "dep:serde", "dep:bincode", "dep:zerocopy"]
