[package]
name = "omnipaxos_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4.20"}
slog = { version = "2.7.0"}
crossterm = { version = "0.26.1" }
ratatui = { version = "0.22.0" }
tui-logger  = { version = "0.9.4", default-features = false,features = ["slog-support", "ratatui-support"] }
omnipaxos = { path = "../omnipaxos"}