[package]
name = "kv_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: it's not nice to depend on git instead of a relative path here, but docker didn't like that
omnipaxos = { git = "https://github.com/haraldng/omnipaxos", features = ["serde"] }
omnipaxos_storage = { git = "https://github.com/haraldng/omnipaxos" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"
rocksdb = "0.18.0"
