[package]
name = "ui"
version = "0.1.0"
edition = "2021"
default-run = "ui"

[dependencies]
omnipaxos = { path = "../../omnipaxos", features = ["macros", "ui"] }
omnipaxos_storage = { path = "../../omnipaxos_storage"}
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde = { version = "1.0", features = ["derive"] }

[features]
derive_entry = []