[package]
name = "ui_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omnipaxos = { path = "../../omnipaxos", features = ["macros", "ui"] }
omnipaxos_storage = { path = "../../omnipaxos_storage"}